Fixed the alignment of the vertical lines to the collapse arrows in Tags #109

--- a/src/scss/Plugins/Core/tags.scss
+++ b/src/scss/Plugins/Core/tags.scss
@@ -14,7 +14,7 @@
 .tree-item .tree-item-self {
 	align-items: center;
 	width: 100%;
-	padding: 1px var(--size-4-1) 1px var(--size-4-2);
+	padding: 1px var(--size-4-1) 1px var(--size-4-1);
 	border: 2px solid transparent;
 }
 
